--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node server.js"
   },
   "author": "Alexandre Foret",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
