--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Alexandre Foret",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-status": "^1.5.0",
     "mongoose": "^5.13.3"
   }
 }
