--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Alexandre Foret",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-status": "^1.5.0",
