Sauce post and get work in progress

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ACCES_MONGOOSE='mongodb+srv://alexandre:Sandre12@cluster0.jr8rj.mongodb.net/dataSoPekocko?retryWrites=true&w=majority'
+ACCES_MONGOOSE=mongodb+srv://alexandre:Sandre12@cluster0.jr8rj.mongodb.net/dataSoPekocko?retryWrites=true&w=majority
