--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
