--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sopekocko_backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "API pour les sauces piquantes",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +19,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "multer": "^1.4.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alxsandre/AlexandreForet_6_12072021.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alxsandre/AlexandreForet_6_12072021/issues"
+  },
+  "homepage": "https://github.com/alxsandre/AlexandreForet_6_12072021#readme"
 }
